[package]
name = "s3-edit-rs"
version = "0.1.0"
authors = ["Gor Hayrapetyan <gor.hayrapetyan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
futures = "0.1.16"